--- a/package.json
+++ b/package.json
@@ -3,26 +3,27 @@
   "version": "1.6.6",
   "scripts": {
     "preinstall": "git config core.hooksPath ./scripts/git_hooks",
-    "format": "node --loader ts-node/esm scripts/format.ts",
-    "check": "node --loader ts-node/esm scripts/check.ts",
-    "build": "node --loader ts-node/esm scripts/build.ts",
-    "watch": "node --loader ts-node/esm scripts/watch.ts",
+    "format": "tsx scripts/format.ts",
+    "check": "tsx scripts/check.ts",
+    "build": "tsx scripts/build.ts",
+    "watch": "tsx scripts/watch.ts",
     "prepare": "husky install"
   },
   "type": "module",
   "devDependencies": {
-    "@total-typescript/ts-reset": "^0.5.1",
-    "@types/archiver": "^5.3.2",
-    "@types/eslint": "^8.44.2",
+    "@total-typescript/ts-reset": "^0.6.1",
+    "@types/archiver": "^7.0.0",
+    "@types/eslint": "^9.6.1",
     "@types/progressbar.js": "^1.1.7",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "archiver": "^6.0.1",
-    "chokidar": "^3.5.3",
-    "eslint": "^8.48.0",
-    "husky": "^8.0.3",
-    "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
+    "archiver": "^7.0.1",
+    "chokidar": "^5.0.0",
+    "eslint": "^9.39.2",
+    "husky": "^9.1.7",
+    "prettier": "^3.7.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
+    "tsx": "^4.21.0"
   }
 }
