Fix bad tsconfig

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -3,7 +3,6 @@
   "include": ["./**/*"],
   "compilerOptions": {
     "noEmit": true,
-    "rootDir": ".",
-    "jsx": "react-jsx"
+    "rootDir": "."
   }
 }
