--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/archiver": "^7.0.0",
     "@types/eslint": "^9.6.1",
@@ -19,9 +20,10 @@
     "archiver": "^7.0.1",
     "chokidar": "^5.0.0",
     "eslint": "^9.39.2",
+    "globals": "^17.0.0",
     "prettier": "^3.7.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
-    "tsx": "^4.21.0"
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
